feat(ui): add meta tags and update application icons
- Add OpenGraph meta tags for social media sharing

- Update application icon to Wallet in SVG format

- Configure preview image for social media representation

- Adjust theme-color to maintain consistency with application theme

--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
 <!doctype html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MoneyHub</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Aplicativo simples para controle financeiro pessoal" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#059669">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="MoneyHub - Gestão Financeira Simplificada" />
+  <meta property="og:image" content="/assets/representation.png" />
+  <meta property="og:description" content="Solução para você organizar suas finanças!" />
+  <meta property="og:site_name" content="MoneyHub" />
+  <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
+  <link rel="apple-touch-icon" href="/wallet.svg" />
+  <link rel="shortcut icon" type="image/svg+xml" href="/wallet.svg" />
+  <title>MoneyHub</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta name="description" content="Aplicativo simples para controle financeiro pessoal" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
