feat: fix meta tags

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="theme-color" content="#059669">
   <meta property="og:type" content="website" />
   <meta property="og:title" content="MoneyHub - Gestão Financeira Simplificada" />
-  <meta property="og:image" content="/assets/representation.png" />
+  <meta property="og:image" content="https://moneyhub-m4t3u5.netlify.app/login/assets/representation.png" />
+  <meta property="og:url" content="https://moneyhub-m4t3u5.netlify.app/login" />
   <meta property="og:description" content="Solução para você organizar suas finanças!" />
   <meta property="og:site_name" content="MoneyHub" />
   <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
