--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#059669">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="MoneyHub - Gestão Financeira Simplificada" />
-  <meta property="og:image" content="https://moneyhub-m4t3u5.netlify.app/login/assets/representation.png" />
-  <meta property="og:url" content="https://moneyhub-m4t3u5.netlify.app/login" />
+  <meta property="og:title" content="Gestão Financeira Simplificada" />
   <meta property="og:description" content="Solução para você organizar suas finanças!" />
+  <meta property="og:image" content="https://moneyhub-m4t3u5.netlify.app/assets/representation.png" />
+  <meta property="og:url" content="https://moneyhub-m4t3u5.netlify.app/login" />
   <meta property="og:site_name" content="MoneyHub" />
+
   <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
   <link rel="apple-touch-icon" href="/wallet.svg" />
   <link rel="shortcut icon" type="image/svg+xml" href="/wallet.svg" />
   <title>MoneyHub</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <meta name="description" content="Aplicativo simples para controle financeiro pessoal" />
+  
 </head>
 
 <body>
