Add Brotli and gzip compression to Vite build
Added vite-plugin-compression with Brotli and gzip algorithms to the Vite config for improved asset compression. Updated dependencies in package.json. Also removed an unused image asset and optimized font loading in index.html.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
   <link rel="apple-touch-icon" href="/wallet.svg" />
   <link rel="shortcut icon" type="image/svg+xml" href="/wallet.svg" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>MoneyHub</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   
