Add splash screen and refactor loading spinner
Introduces a new animated SplashScreen component for initial app load and refactors loading indicators into a reusable LoadingSpinner component. Updates App and PrivateRoute to use the new spinner, adds a web app manifest for PWA support, and applies minor style and manifest link changes to index.html.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,21 @@
   <meta property="og:url" content="https://moneyhub-m4t3u5.netlify.app/login" />
   <meta property="og:site_name" content="MoneyHub" />
 
+  <link rel="manifest" href="/manifest.json" />
   <link rel="icon" type="image/svg+xml" href="/wallet.svg" />
   <link rel="apple-touch-icon" href="/wallet.svg" />
   <link rel="shortcut icon" type="image/svg+xml" href="/wallet.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <title>MoneyHub</title>
+  <style>
+    body {
+      background-color: #030712;
+      margin: 0;
+    }
+  </style>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-  
+
 </head>
 
 <body>
